--- a/app/alertStation/app/src/main/res/values/strings.xml
+++ b/app/alertStation/app/src/main/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
+    <string name="settings">הגדרות</string>
+    <string name="app">הפעלת התראה</string>
+    <string name="about">אודות</string>
+
+
 
 </resources>
