--- a/app/alertStation/app/src/main/res/values/strings.xml
+++ b/app/alertStation/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="settings">הגדרות</string>
     <string name="settingsDistanceFromStation">מרחק מתחנה:</string>
     <string name="btSave">שמירה</string>
+    <string name="alertType">סוגי התראות</string>
+    <string name="notification">התראה</string>
+    <string name="alertClock">שעון מעורר</string>
 
     <string name="title_activity_home_page">HomePage</string>
 
